Use custom enums for Parser